--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -274,18 +274,57 @@ footer p{
     color: rgb(70, 44, 12);
     line-height:10px;
 }
-.social-icons a{
-    width: 40px;
-    height:40px;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    background-color:#e6e3e3;
-    margin:20px 10px;
-    border-radius:50%;
-}
-.social-icons{
+.social-icons ul {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 0;
+    margin: 0;
     display: flex;
+}
+.social-icons  ul li {
+    list-style: none;
+    margin: 0 10px;
+}
+.social-icons  ul li .fa {
+    color: #000000;
+    font-size: 25px;
+    line-height: 50px;
+    transition: .5s;
+}
+.social-icons  ul li .fa:hover {
+    color: #ffffff;
+}
+.social-icons  ul li a {
+    position: relative;
+    display: block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: white;
+    text-align: center;
+    transition: 0.5s;
+    transform: translate(0,0px);
+    box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.5);
+}
+.social-icons ul li a:hover {
+    transform: rotate(0deg) skew(0deg) translate(0, -10px);
+}
+.social-icons ul li:nth-child(1) a:hover {
+    background-color: #3b5999;
+}
+.social-icons  ul li:nth-child(2) a:hover {
+    background-color: #55acee;
+}
+.social-icons  ul li:nth-child(3) a:hover {
+    background-color: #e4405f;
+}
+.social-icons  ul li:nth-child(4) a:hover {
+    background-color: #cd201f;
+}
+.social-icons  ul li:nth-child(5) a:hover {
+    background-color: #0077B5;
 }
 .copyright{
     color:#565555;
@@ -295,3 +334,75 @@ footer p{
     left: 50%;
     transform: translateX(-50%);
 }
+.skill-bars {
+	list-style: none;
+	margin: 6rem 0 3rem;
+}
+.skill-bars li {
+	height: .3rem;
+	background: #a1a1a1;
+	width: 500px;
+	margin-bottom: 3rem;
+	padding: 0;
+	position: relative;
+}
+.skill-bars li strong {
+	position: absolute;
+	left: 0;
+	top: -3rem;
+	font-family: "poppins-bold", sans-serif;
+	color: #313131;
+	text-transform: uppercase;
+	letter-spacing: .2rem;
+	font-size: 20px;
+	line-height: 2.4rem;
+}
+.skill-bars li .progress {
+	background: #313131;
+	position: relative;
+	height: 100%;
+}
+.skill-bars li .progress span {
+	position: absolute;
+	right: 0;
+	top: -3.6rem;
+	display: block;
+	font-family: "poppins-regular", sans-serif;
+	color: white;
+	font-size: 1.1rem;
+	line-height: 1;
+	background: #313131;
+	padding: .6rem .6rem;
+	border-radius: 3px;
+}
+.skill-bars li .progress span::after {
+	position: absolute;
+	left: 50%;
+	bottom: -5px;
+	margin-left: -5px;
+	border-right: 5px solid transparent;
+	border-left: 5px solid transparent;
+	border-top: 5px solid #313131;
+	content: "";
+}
+
+.skill-bars li .percent5   { width: 5%; }
+.skill-bars li .percent10  { width: 10%; }
+.skill-bars li .percent15  { width: 15%; }
+.skill-bars li .percent20  { width: 20%; }
+.skill-bars li .percent25  { width: 25%; }
+.skill-bars li .percent30  { width: 30%; }
+.skill-bars li .percent35  { width: 35%; }
+.skill-bars li .percent40  { width: 40%; }
+.skill-bars li .percent45  { width: 45%; }
+.skill-bars li .percent50  { width: 50%; }
+.skill-bars li .percent55  { width: 55%; }
+.skill-bars li .percent60  { width: 60%; }
+.skill-bars li .percent65  { width: 65%; }
+.skill-bars li .percent70  { width: 70%; }
+.skill-bars li .percent75  { width: 75%; }
+.skill-bars li .percent80  { width: 80%; }
+.skill-bars li .percent85  { width: 85%; }
+.skill-bars li .percent90  { width: 90%; }
+.skill-bars li .percent95  { width: 95%; }
+.skill-bars li .percent100 { width: 100%; }
