--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -274,57 +274,18 @@ footer p{
     color: rgb(70, 44, 12);
     line-height:10px;
 }
-.social-icons ul {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 0;
-    margin: 0;
+.social-icons a{
+    width: 40px;
+    height:40px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color:#e6e3e3;
+    margin:20px 10px;
+    border-radius:50%;
+}
+.social-icons{
     display: flex;
-}
-.social-icons  ul li {
-    list-style: none;
-    margin: 0 10px;
-}
-.social-icons  ul li .fa {
-    color: #000000;
-    font-size: 25px;
-    line-height: 50px;
-    transition: .5s;
-}
-.social-icons  ul li .fa:hover {
-    color: #ffffff;
-}
-.social-icons  ul li a {
-    position: relative;
-    display: block;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: white;
-    text-align: center;
-    transition: 0.5s;
-    transform: translate(0,0px);
-    box-shadow: 0px 7px 5px rgba(0, 0, 0, 0.5);
-}
-.social-icons ul li a:hover {
-    transform: rotate(0deg) skew(0deg) translate(0, -10px);
-}
-.social-icons ul li:nth-child(1) a:hover {
-    background-color: #3b5999;
-}
-.social-icons  ul li:nth-child(2) a:hover {
-    background-color: #55acee;
-}
-.social-icons  ul li:nth-child(3) a:hover {
-    background-color: #e4405f;
-}
-.social-icons  ul li:nth-child(4) a:hover {
-    background-color: #cd201f;
-}
-.social-icons  ul li:nth-child(5) a:hover {
-    background-color: #0077B5;
 }
 .copyright{
     color:#565555;
@@ -341,7 +302,7 @@ footer p{
 .skill-bars li {
 	height: .3rem;
 	background: #a1a1a1;
-	width: 500px;
+	width: 400px;
 	margin-bottom: 3rem;
 	padding: 0;
 	position: relative;
